--- a/wedding/css/style.css
+++ b/wedding/css/style.css
@@ -1,67 +1,103 @@
 /*.header{*/
+
+
 /*    background-image: url('../img/banner.jpg');*/
+
+
 /*    background-size: cover;*/
+
+
 /*    padding: 10% 0;*/
+
+
 /*}*/
 
-.header .container{
-position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.header .container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
-.datafield{
+
+.datafield {
     border: 10px solid #C8C8C8;
-    border-radius: 27px;padding-bottom: 70px;    background: #1010109e;max-width: 625px;
+    border-radius: 27px;
+    padding-bottom: 70px;
+    background: #1010109e;
+    max-width: 625px;
     margin: auto;
 }
-.datafield img{
-    position: relative;    width: 45%;
+
+.datafield img {
+    position: relative;
+    width: 45%;
 }
-.text{
+
+.text {
     position: absolute;
     top: 15px;
     right: 0;
     left: 0;
     margin: auto;
 }
-.text p{
+
+.text p {
     font-family: Poppins;
     font-size: 20px;
     font-style: italic;
     color: #fff;
 }
-.text h3{
+
+.text h3 {
     font-family: Poppins;
     font-size: 27px;
     font-style: italic;
-    color: #fff;    line-height: 29px;
+    color: #fff;
+    line-height: 29px;
 }
-.datafield h1{
-     font-family: Poppins;
+
+.datafield h1 {
+    font-family: Poppins;
     font-size: 47px;
-   font-weight: 500;
-    color: #fff;      margin-bottom: 6%;
+    font-weight: 500;
+    color: #fff;
+    margin-bottom: 6%;
 }
-.datafield h1 span{color: #F33C3C;}
-.getting{color: #fff;font-family: Times New Roman;font-size: 21px;position: relative;}
-.getting:before{
+
+.datafield h1 span {
+    color: #F33C3C;
+}
+
+.getting {
+    color: #fff;
+    font-family: Times New Roman;
+    font-size: 21px;
+    position: relative;
+}
+
+.getting:before {
     content: "";
     position: absolute;
     border-top: 2px solid #f33c3c;
-    width: 476px;left: 0;
+    width: 476px;
+    left: 0;
     right: 0;
-    margin: auto;top: -13px;
+    margin: auto;
+    top: -13px;
 }
-.getting:after{
+
+.getting:after {
     content: "";
     position: absolute;
     border-bottom: 2px solid #f33c3c;
-    width: 476px;left: 0;
+    width: 476px;
+    left: 0;
     right: 0;
-    margin: auto;bottom: -13px;
+    margin: auto;
+    bottom: -13px;
 }
-.carousel-control span{
+
+.carousel-control span {
     background: #fff;
     width: 50px;
     height: 50px;
@@ -72,32 +108,84 @@ position: absolute;
     padding-top: 5px;
     padding-left: 5px;
 }
-.carousel-control{left: 40px}
-.carousel-control.right{right: 40px;}
-.carousel-control span.fa-angle-left{padding-left: 0}
-.logo{background-color: #F33C3C;padding: 30px 0;position: relative;}
-.logo img{width: 21%;}
-.logo:before{
+
+.carousel-control {
+    left: 40px
+}
+
+.carousel-control.right {
+    right: 40px;
+}
+
+.carousel-control span.fa-angle-left {
+    padding-left: 0
+}
+
+.logo {
+    background-color: #F33C3C;
+    padding: 30px 0;
+    position: relative;
+}
+
+.logo img {
+    width: 21%;
+}
+
+.logo:before {
     content: "";
     position: absolute;
     background-image: url('../img/bg.png');
-background-size: cover;top: 0;
+    background-size: cover;
+    top: 0;
     right: 0;
     width: 25%;
     height: 100%;
 }
-.users{
+
+.users {
     background-image: url('../img/pattern.png');
-background-size: cover;padding: 50px 0 26px;
+    background-size: cover;
+    padding: 50px 0 26px;
 }
-.users h1{font-size: 26px;}
-.userfield h3{color: #F43C3C;font-size: 28px;font-family: poppins;font-weight: 400;}
-.userfield h3 span{font-weight: 600;}
-.userfield p{color: #585858;font-size: 17px;font-family: poppins;font-weight: 400;}
-img{width: 100%;}
-.userfield ul{padding-left: 0;list-style: none;}
-.userfield ul li{display: inline-block;margin-right: 10px;}
-.userfield ul li a{    border: 1px solid #E6E6E6;
+
+.users h1 {
+    font-size: 26px;
+}
+
+.userfield h3 {
+    color: #F43C3C;
+    font-size: 28px;
+    font-family: poppins;
+    font-weight: 400;
+}
+
+.userfield h3 span {
+    font-weight: 600;
+}
+
+.userfield p {
+    color: #585858;
+    font-size: 17px;
+    font-family: poppins;
+    font-weight: 400;
+}
+
+img {
+    width: 100%;
+}
+
+.userfield ul {
+    padding-left: 0;
+    list-style: none;
+}
+
+.userfield ul li {
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.userfield ul li a {
+    border: 1px solid #E6E6E6;
     width: 48px;
     height: 48px;
     color: #111111;
@@ -105,28 +193,83 @@ img{width: 100%;}
     border-radius: 50%;
     text-align: center;
     padding-top: 10px;
-    font-size: 20px;}
-    .major{
-            font-size: 15px!important;
+    font-size: 20px;
+}
+
+.major {
+    font-size: 15px!important;
     margin-top: 6%;
     margin-bottom: 6%;
-    }
-    .invite{border:4px solid #D9D7D7;border-radius: 34px;padding:53px;    margin-bottom: 6%;}
-    .userfield h4{color: #585858;font-family: Poppins;font-size:28px;text-transform: uppercase;font-weight: 500;
-    margin-top: 33px;}
-    .jan_n{
-        color: #EF3E3A!important;font-family: Poppins!important;font-size: 28px!important;text-transform: uppercase;font-weight: 600!important;
-    margin-top: 9px;margin-bottom: 10px;
-    }
-    .count{background-image: url('../img/count.png');background-size: cover;padding: 70px 0;}
-    .count p{font-size: 27px;font-family: Poppins;font-weight: 400;color: #fff;}
-    .count h3{font-size: 44px;font-family: Poppins;font-weight: 400;color: #fff;margin: 0;}
-    .count h3 span{font-weight: 700;}
-    .count ul{padding-left: 0;list-style: none;float: right;}
-    .count ul li{display: inline-block;margin-right: 48px;}
-    .count ul li:last-child{margin-right: 0}
-    .count ul li p:first-child{
-           border: 6px solid #595959;
+}
+
+.invite {
+    border: 4px solid #D9D7D7;
+    border-radius: 34px;
+    padding: 53px;
+    margin-bottom: 6%;
+}
+
+.userfield h4 {
+    color: #585858;
+    font-family: Poppins;
+    font-size: 28px;
+    text-transform: uppercase;
+    font-weight: 500;
+    margin-top: 33px;
+}
+
+.jan_n {
+    color: #EF3E3A!important;
+    font-family: Poppins!important;
+    font-size: 28px!important;
+    text-transform: uppercase;
+    font-weight: 600!important;
+    margin-top: 9px;
+    margin-bottom: 10px;
+}
+
+.count {
+    background-image: url('../img/count.png');
+    background-size: cover;
+    padding: 70px 0;
+}
+
+.count p {
+    font-size: 27px;
+    font-family: Poppins;
+    font-weight: 400;
+    color: #fff;
+}
+
+.count h3 {
+    font-size: 44px;
+    font-family: Poppins;
+    font-weight: 400;
+    color: #fff;
+    margin: 0;
+}
+
+.count h3 span {
+    font-weight: 700;
+}
+
+.count ul {
+    padding-left: 0;
+    list-style: none;
+    float: right;
+}
+
+.count ul li {
+    display: inline-block;
+    margin-right: 48px;
+}
+
+.count ul li:last-child {
+    margin-right: 0
+}
+
+.count ul li p:first-child {
+    border: 6px solid #595959;
     border-radius: 18px;
     width: 110px;
     height: 110px;
@@ -134,102 +277,211 @@ img{width: 100%;}
     line-height: 103px;
     font-size: 42px;
     font-weight: 600;
-    }
-    .count ul li p{
-            color: #C8C8C8;
+}
+
+.count ul li p {
+    color: #C8C8C8;
     font-size: 20px;
     text-align: center;
     margin-top: 10px;
-    }
-    .padd-0{padding: 0}
-    .count .col-md-12{display: flex;align-items: center;}
-    .fs15{font-size: 15px!important;}
-    .fw600{font-weight: 600!important;}
-    .lh26{line-height: 26px!important;}
-    .invite a{color: #F33C3C}
-    .pot_line{margin-bottom: 6%;}
-    .pot_line img{width: 4%;position: relative;    z-index: 9;}
-    .pot_line:after{    content: "";
+}
+
+.padd-0 {
+    padding: 0
+}
+
+.count .col-md-12 {
+    display: flex;
+    align-items: center;
+}
+
+.fs15 {
+    font-size: 15px!important;
+}
+
+.fw600 {
+    font-weight: 600!important;
+}
+
+.lh26 {
+    line-height: 26px!important;
+}
+
+.invite a {
+    color: #F33C3C
+}
+
+.pot_line {
+    margin-bottom: 6%;
+}
+
+.pot_line img {
+    width: 4%;
+    position: relative;
+    z-index: 9;
+}
+
+.pot_line:after {
+    content: "";
     position: absolute;
     border-top: 2px solid #f33c3c;
-        width: 176px;
+    width: 176px;
     left: 0;
     right: 0;
     margin: auto;
-    top: 95px;}
-    .invi_img{    margin-top: -10%;}
-    .gallery{
-        background-image: url('../img/bg1.jpg');
-        background-size: cover;padding:50px 0;position: relative;
-    }
-    .gallery h1, .family h1{color: #fff;font-size: 26px;}
-    .gallery img, .pot1{width: 15%;}
-.carousel-inner .invite{
+    top: 95px;
+}
+
+.invi_img {
+    margin-top: -10%;
+}
+
+.gallery {
+    background-image: url('../img/bg1.jpg');
+    background-size: cover;
+    padding: 50px 0;
+    position: relative;
+}
+
+.gallery h1,
+.family h1 {
+    color: #fff;
+    font-size: 26px;
+}
+
+.gallery img,
+.pot1 {
+    width: 15%;
+}
+
+.carousel-inner .invite {
     padding: 25px;
 }
-.carousel-inner img{width: 57%}
-    .wedd_gal {
-  display: -ms-flexbox; /* IE10 */
-  display: flex;
-  -ms-flex-wrap: wrap; /* IE10 */
-  flex-wrap: wrap;
-  padding: 0 4px;
+
+.carousel-inner img {
+    width: 57%;
 }
+
+.wedd_gal {
+    display: -ms-flexbox;
+    /* IE10 */
+    display: flex;
+    -ms-flex-wrap: wrap;
+    /* IE10 */
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+
 .wedd_gal .column {
-  -ms-flex: 25%; /* IE10 */
-  flex: 25%;
-  max-width: 25%;
-  padding: 0 11px;
+    -ms-flex: 25%;
+    /* IE10 */
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 11px;
 }
 
 .wedd_gal .column img {
-  margin-top: 23px;
-  vertical-align: middle;
-  width: 100%;
+    margin-top: 23px;
+    vertical-align: middle;
+    width: 100%;
 }
+
 
 /* Responsive layout - makes a two column-layout instead of four columns */
+
 @media screen and (max-width: 800px) {
- .wedd_gal .column {
-    -ms-flex: 50%;
-    flex: 50%;
-    max-width: 50%;
-  }
+    .wedd_gal .column {
+        -ms-flex: 50%;
+        flex: 50%;
+        max-width: 50%;
+    }
 }
 
+
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+
 @media screen and (max-width: 600px) {
- .wedd_gal .column {
-    -ms-flex: 100%;
-    flex: 100%;
-    max-width: 100%;
-  }
+    .wedd_gal .column {
+        -ms-flex: 100%;
+        flex: 100%;
+        max-width: 100%;
+    }
 }
-.family{background-size: cover;background-image: url('../img/bg2.jpg');padding: 50px 0;}
-.contact{background-size: cover;background-image: url('../img/bg4.jpg');padding: 50px 0;}
-.contact ul{padding-left: 0;list-style: none;}
-.contact ul li img{width: 60%}
-.contact-detail{display: flex;}
-.detail p{color: #fff;font-family: Poppins;font-size: 17px;font-weight: 400;}
-.detail h4{color: #fff;font-family: Poppins;font-size: 22px;font-weight: 600;margin-top: 0}
-.det_img{border: 3px solid #fff;
+
+.family {
+    background-size: cover;
+    background-image: url('../img/bg2.jpg');
+    padding: 50px 0;
+}
+
+.contact {
+    background-size: cover;
+    background-image: url('../img/bg4.jpg');
+    padding: 50px 0;
+}
+
+.contact ul {
+    padding-left: 0;
+    list-style: none;
+}
+
+.contact ul li img {
+    width: 60%
+}
+
+.contact-detail {
+    display: flex;
+}
+
+.detail p {
+    color: #fff;
+    font-family: Poppins;
+    font-size: 17px;
+    font-weight: 400;
+}
+
+.detail h4 {
+    color: #fff;
+    font-family: Poppins;
+    font-size: 22px;
+    font-weight: 600;
+    margin-top: 0
+}
+
+.det_img {
+    border: 3px solid #fff;
     border-radius: 11px;
     width: 45px;
     height: 45px;
     display: inline-table;
     text-align: center;
-    padding-top: 8px;margin-right: 27px;}
-    footer{background-color: #090B06;padding: 30px 0;position: relative;}
-    footer p{
-        color: #fff;
+    padding-top: 8px;
+    margin-right: 27px;
+}
+
+footer {
+    background-color: #090B06;
+    padding: 30px 0;
+    position: relative;
+}
+
+footer p {
+    color: #fff;
     font-size: 17px;
     font-family: Poppins;
     margin-top: 22px;
-    }
-    .contact ul li{margin-bottom: 20px;}
-    .event_lin{margin-top: 6%;}
-.fa-angle-up{
-        background: #fff;
+}
+
+.contact ul li {
+    margin-bottom: 20px;
+}
+
+.event_lin {
+    margin-top: 6%;
+}
+
+.fa-angle-up {
+    background: #fff;
     width: 69px;
     height: 69px;
     font-size: 41px!important;
@@ -238,7 +490,8 @@ img{width: 100%;}
     padding-top: 8px;
     border: 4px solid #000;
     margin-top: -56px!important;
-    position: absolute;left: 0;
+    position: absolute;
+    left: 0;
     right: 0;
     margin: auto;
 }
@@ -248,7 +501,7 @@ img{width: 100%;}
     bottom: 26px;
     right: 39px;
     z-index: 98;
-    padding: 21px;   
+    padding: 21px;
     background-color: #F55858;
     border-radius: 50%;
 }
@@ -283,23 +536,59 @@ img{width: 100%;}
 .height {
     height: 3000px
 }
-.carousel-inner ul{padding-left: 0;list-style: none;
+
+.carousel-inner ul {
+    padding-left: 0;
+    list-style: none;
     margin-top: 25px;
 }
-.invite h2{color: #fff;font-size: 20px;font-family: Poppins;font-weight: 600}
-.carousel-inner ul li{display: inline-block;    margin-right: 7px;}
-.carousel-inner ul li a{border-radius: 50%;
+
+.invite h2 {
+    color: #fff;
+    font-size: 20px;
+    font-family: Poppins;
+    font-weight: 600
+}
+
+.carousel-inner ul li {
+    display: inline-block;
+    margin-right: 7px;
+}
+
+.carousel-inner ul li a {
+    border-radius: 50%;
     border: 3px solid #989797d1;
     width: 45px;
     height: 45px;
     color: #AEAEAE;
     display: block;
     font-size: 20px;
-    line-height: 38px;}
-    .carousel-inner p{color: #707070}
+    line-height: 38px;
+}
 
-    .family .carousel-control{position: relative;float: right;    margin-bottom: 0;
-    margin-top: 18px;}
-    .family .carousel-control.right{right: 0;left: 40px;margin-right: 32px;}
-    .family .carousel-control span{width: 40px;height: 40px;font-size: 29px;}
-    .move_sign{    margin-bottom: 4%;}
+.carousel-inner p {
+    color: #707070
+}
+
+.family .carousel-control {
+    position: relative;
+    float: right;
+    margin-bottom: 0;
+    margin-top: 18px;
+}
+
+.family .carousel-control.right {
+    right: 0;
+    left: 40px;
+    margin-right: 32px;
+}
+
+.family .carousel-control span {
+    width: 40px;
+    height: 40px;
+    font-size: 29px;
+}
+
+.move_sign {
+    margin-bottom: 4%;
+}
